cn.com.agree.ab.a4.client.web依赖了两个jar包，他们是通过import package方式导入的，wuff无法没有处理，所以只能只能自己加入

--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,13 @@ subprojects {
         }
     }
 
+    if (name == 'cn.com.agree.ab.a4.client.web') {
+        afterEvaluate {
+            project.dependencies.add 'compile', "${eclipseMavenGroup}:org.eclipse.jetty.security:+"
+            project.dependencies.add 'compile', "${eclipseMavenGroup}:javax.el:+"
+        }
+    }
+
     if (name == 'cn.com.agree.cocktail') {
         jar {
             from('src/cn/com/agree/cocktail/client.gif') {
