启用自动搜索plugins目录下的jar

--- a/abc/build.gradle
+++ b/abc/build.gradle
@@ -56,6 +56,7 @@ gradle.buildFinished { buildResult ->
             }
             File config = new File(target, 'config.ini')
             if (ext.has("methods")) {
+                ext.methods.changeProperties(config, 'eclipse.application', 'cn.com.agree.ab.a4.client.app')
                 ext.methods.changeConfig(config, 'cn.com.agree.ab.a4.client.product')
             }
         }
