--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,7 @@ subprojects {
         }
     }
 
-    if (name == 'cn.com.agree.ab.a4.client.web') {
+    if (name == 'cn.com.agree.ab.a4.client.web' || name == 'cn.com.agree.ab.a4.server.web') {
         afterEvaluate {
             project.dependencies.add 'compile', "${eclipseMavenGroup}:org.eclipse.jetty.security:+"
             project.dependencies.add 'compile', "${eclipseMavenGroup}:javax.el:+"
