国际化插件将配置文件也打包进去

--- a/build.gradle
+++ b/build.gradle
@@ -104,4 +104,13 @@ subprojects {
             }
         }
     }
+
+    if (name == 'cn.com.agree.international') {
+        jar {
+            from('src/cn/com/agree/international') {
+                include '*.properties'
+                into 'cn/com/agree/international'
+            }
+        }
+    }
 }
