--- a/abs/build.gradle
+++ b/abs/build.gradle
@@ -15,16 +15,27 @@ wuff {
 
 products {
     nativeLauncher = false
-    product platform: 'windows', arch: 'x86_32', launchers: ['windows', 'shell'], jre: 'C:\\dev\\tools\\java\\32bit\\jdk1.7.0_51'
+    product platform: 'windows', arch: 'x86_32', launchers: ['windows', 'shell']//, jre: 'C:\\dev\\tools\\java\\32bit\\jdk1.7.0_51'
     product platform: 'windows', arch: 'x86_64', launchers: ['windows', 'shell']
+    archiveProducts = true
 }
 
 apply from: '../methods.gradle'
 
-gradle.buildFinished { buildResult ->
-    if (buildResult.getFailure() != null) {
-        logger.info 'abs build product fail'
-        return
+afterEvaluate {
+    def buildProducts = tasks.findAll {
+        it.name.startsWith('buildProduct_')
+    }
+    buildProducts.each {
+        it.doLast {
+            println "beforeArchiveProduct: " + beforeArchiveProduct()
+        }
+    }
+}
+
+def beforeArchiveProduct() {
+    if (!ext.has("methods")) {
+        return false
     }
     File rootServer = new File(rootDir, 'ab/AB_Server/Basic/cn.com.agree.ab.a4.server/ROOT')
 
@@ -45,22 +56,19 @@ gradle.buildFinished { buildResult ->
         File file = files[0] // get latest directory
         if (file.isDirectory()) {
             File target = new File(file, 'configuration')
-            if (ext.has("methods")) {
-                ext.methods.copyResources(fileNames, source, target)
-//                ext.methods.copyResources(['config.ini'], projectDir, target, true)
+            ext.methods.copyResources(fileNames, source, target)
 
-                File plugins = new File(file, 'plugins')
-                ext.methods.deleteBundle(project.name, plugins)
-            }
+            File plugins = new File(file, 'plugins')
+            ext.methods.deleteBundle(project.name, plugins)
+
             File prefFile = new File(file, 'preferenceServer')
-            if (ext.has("methods")) {
-                ext.methods.copyResources(prefs, prefDir, prefFile)
-            }
+            ext.methods.copyResources(prefs, prefDir, prefFile)
+
             File config = new File(target, 'config.ini')
-            if (ext.has("methods")) {
-                ext.methods.changeConfig(config, 'cn.com.agree.ab.a4.server.product')
-            }
-            ext.methods.copyResources(['workspace'], rootServer, new File(file, 'workspace'))
+            ext.methods.changeConfig(config, 'cn.com.agree.ab.a4.server.product')
+
+//            ext.methods.copyResources(['workspace'], rootServer, new File(file, 'workspace'))
         }
     }
+    return true
 }
