--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@
 #JAVA_HOME=C:\\dev\\tools\\java\32bit\\jdk1.7.0_51
 #JAVA_PATH=%JAVA_HOME%\\bin
 
-JAVA_OPTS=-Xms512m -Xmx2048m -XX:PermSize=512m -XX:MaxPermSize=1024m
+JAVA_OPTS=-Xms128m -Xmx512m -XX:PermSize=256m -XX:MaxPermSize=512m
+#GRADLE_OPTS=-Xms128m -Xmx512m -XX:PermSize=256m -XX:MaxPermSize=512m
 
 #org.gradle.jvmargs=-XX:MaxPermSize=1024m
