升级eclipse版本后需要的修改
1. eclipse版本支持4.7.1a
2. 仓库地址修改为公司局域网地址
3. 全局变量设置eclipse版本
4. 去掉JVM 版本号要求
5. 升级ab仓库代码后增加了三个插件依赖

--- a/abc/build.gradle
+++ b/abc/build.gradle
@@ -9,11 +9,12 @@ dependencies {
 }
 
 wuff {
-    selectedEclipseVersion = '4.3.2'
+    selectedEclipseVersion = rootProject.ext.eclipseVersion
 }
 
 products {
-//    product jre: 'C:\\dev\\tools\\java\\32bit\\jdk1.7.0_51'
+//    product jre: 'C:\\dev\\tools\\java\\32bit\\jdk1.7.0_51\\jre'
+    product jre: 'C:\\dev\\tools\\java\\32bit\\jdk-8u112-windows-x86\\jre'
 //    additionalFilesToArchive = ["C:\\dev\\workspaces\\abc\\bundles.gradle"]
     jvmArgs = ['-Djava.library.path=./interface/engine']
     archiveProducts = true
