--- a/abs/build.gradle
+++ b/abs/build.gradle
@@ -10,12 +10,13 @@ dependencies {
 }
 
 wuff {
-    selectedEclipseVersion = '4.3.2'
+    selectedEclipseVersion = rootProject.ext.eclipseVersion
 }
 
 products {
     nativeLauncher = false
-    product platform: 'windows', arch: 'x86_32', launchers: ['windows', 'shell']//, jre: 'C:\\dev\\tools\\java\\32bit\\jdk1.7.0_51'
+//    product platform: 'windows', arch: 'x86_32', launchers: ['windows', 'shell'], jre: 'C:\\dev\\tools\\java\\32bit\\jdk1.7.0_51\jre'
+    product platform: 'windows', arch: 'x86_32', launchers: ['windows', 'shell'], jre: 'C:\\dev\\tools\\java\\32bit\\jdk-8u112-windows-x86\\jre'
     product platform: 'windows', arch: 'x86_64', launchers: ['windows', 'shell']
     archiveProducts = true
 }
@@ -79,7 +80,7 @@ def beforeArchiveProduct() {
             File config = new File(target, 'config.ini')
             ext.methods.changeConfig(config, 'cn.com.agree.ab.a4.server.product')
 
-//            ext.methods.copyResources(['workspace'], rootServer, new File(file, 'workspace'))
+            ext.methods.copyResources(['workspace'], rootServer, new File(file, 'workspace'))
 
             ext.methods.copyResourcesWithEncode(['changelog-ab.md', 'changelog-adore.md'], new File(buildDir, 'changelogs'), file, 'GBK', 'UTF-8')
         }
