--- a/abc/build.gradle
+++ b/abc/build.gradle
@@ -14,7 +14,7 @@ wuff {
 
 products {
 //    product jre: 'C:\\dev\\tools\\java\\32bit\\jdk1.7.0_51\\jre'
-    product jre: 'C:\\dev\\tools\\java\\32bit\\jdk-8u112-windows-x86\\jre'
+//    product jre: 'C:\\dev\\tools\\java\\32bit\\jdk-8u112-windows-x86\\jre'
 //    additionalFilesToArchive = ["C:\\dev\\workspaces\\abc\\bundles.gradle"]
     jvmArgs = ['-Djava.library.path=./interface/engine']
     archiveProducts = true
