使用指定的wuffDir

--- a/abc/build.gradle
+++ b/abc/build.gradle
@@ -10,6 +10,8 @@ dependencies {
 
 wuff {
     selectedEclipseVersion = rootProject.ext.eclipseVersion
+    wuffDir = new File(rootDir, rootProject.ext.eclipsePlugins as String)
+    localMavenRepositoryDir = new File(wuffDir, 'm2_repository')
 }
 
 products {
