--- a/settings.gradle
+++ b/settings.gradle
@@ -6,7 +6,8 @@ def mappings = [
 
 def filters = ["\\..*", "Api", "App*", "DaLianBank", "EVS", "HuiShangYinHang",
         "LTS_Core", "Tools", "ZhangJiaGang", "Doc", "Deprecated",
-        "build", "gradle", "jiangnan", ".*\\.ads\\..*", "wuff"
+        "build", "gradle", "jiangnan", ".*\\.ads\\..*", "wuff",
+        "eclipse_plugins"
 ]
 
 if (ext.has("methods")) {
