gradle插件指定版本

--- a/changelog.gradle
+++ b/changelog.gradle
@@ -8,7 +8,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath "se.bjurr.gitchangelog:git-changelog-gradle-plugin:+"
+        classpath "se.bjurr.gitchangelog:git-changelog-gradle-plugin:1.53"
     }
 }
 
