abs,abc 固定产品版本

--- a/abc/build.gradle
+++ b/abc/build.gradle
@@ -8,6 +8,8 @@ dependencies {
     compile project(":cn.com.agree.ab.a4.client.update.plugin")
 }
 
+version = rootProject.ext.productVersion
+
 wuff {
     selectedEclipseVersion = rootProject.ext.eclipseVersion
     wuffDir = new File(rootDir, rootProject.ext.eclipsePlugins as String)
