--- a/abs/build.gradle
+++ b/abs/build.gradle
@@ -9,6 +9,8 @@ dependencies {
     compile project(":cn.com.agree.ab.a4.server.web")
 }
 
+version = rootProject.ext.productVersion
+
 wuff {
     selectedEclipseVersion = rootProject.ext.eclipseVersion
     wuffDir = new File(rootDir, rootProject.ext.eclipsePlugins as String)
